force-app/main/default/objects/Integration__mdt/Integration__mdt.object-meta.xml
<CustomObject>
    <description>For all Integration related information</description>
    <label>Integration</label>
    <pluralLabel>Integrations</pluralLabel>
</CustomObject>