force-app/main/default/objects/Integration__mdt/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <description>Password for the Integration</description>
    <inlineHelpText>Password for the Integration</inlineHelpText>
    <label>Password</label>
    <length>50</length>
    <type>Text</type>
</CustomField>