force-app/main/default/objects/Integration__mdt/fields/Url__c.field-meta.xml
<CustomField>
    <fullName>Url__c</fullName>
    <description>The integration URL</description>
    <inlineHelpText>The integration URL</inlineHelpText>
    <label>Url</label>
    <required>true</required>
    <type>Url</type>
</CustomField>