force-app/main/default/objects/Integration__mdt/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <description>Username for the Integration</description>
    <inlineHelpText>Username for the Integration</inlineHelpText>
    <label>Username</label>
    <length>50</length>
    <type>Text</type>
</CustomField>